Fix typo in my name

--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The spraygun_trigger package</description>
 
-  <maintainer email="lvov.g@northeastern.edu">Gary Lvo</maintainer>
+  <maintainer email="lvov.g@northeastern.edu">Gary Lvov</maintainer>
 
   <license>TODO</license>
 
