--- a/package.xml
+++ b/package.xml
@@ -4,14 +4,21 @@
   <version>0.0.0</version>
   <description>The spraygun_trigger package</description>
 
-  <maintainer email="lvov.g@northeastern.edu">Gary Lvov</maintainer>
+  <maintainer email="lvov.g@northeastern.edu">Gary Lvo</maintainer>
 
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>interbotix_xs_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+
   <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>interbotix_xs_msgs</build_export_depend>
+  
+  <exec_depend>interbotix_xs_msgs</exec_depend>
+  <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
